// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getItemById returns a dead item 1`] = `
{
  "author": "clement189",
  "childrenIds": undefined,
  "dead": true,
  "deleted": false,
  "id": 29013059,
  "numChildren": undefined,
  "parentId": undefined,
  "pollId": undefined,
  "pollOptionsIds": undefined,
  "score": 1,
  "text": undefined,
  "timestamp": "2021-10-27T13:31:37.000Z",
  "title": "Move from one page to another without loading",
  "type": "story",
  "url": "https://dev.to/clementgaudiniere/move-from-one-page-to-another-without-loading-jlb",
}
`;

exports[`getItemById returns a deleted item 1`] = `
{
  "author": undefined,
  "childrenIds": undefined,
  "dead": false,
  "deleted": true,
  "id": 27121851,
  "numChildren": undefined,
  "parentId": 27120206,
  "pollId": undefined,
  "pollOptionsIds": undefined,
  "score": undefined,
  "text": undefined,
  "timestamp": "2021-05-11T18:41:22.000Z",
  "title": undefined,
  "type": "comment",
  "url": undefined,
}
`;

exports[`getItemById returns an existing 'ask hn' story item 1`] = `
{
  "author": "tel",
  "childrenIds": [
    121016,
    121109,
    121168,
  ],
  "dead": false,
  "deleted": false,
  "id": 121003,
  "numChildren": 16,
  "parentId": undefined,
  "pollId": undefined,
  "pollOptionsIds": undefined,
  "score": 25,
  "text": "or HN: the Next Iteration

I get the impression that with Arc being released a lot of people who never had time for HN before are suddenly dropping in more often. (PG: what are the numbers on this? I'm envisioning a spike.)

Not to say that isn't great, but I'm wary of Diggification. Between links comparing programming to sex and a flurry of gratuitous, ostentatious adjectives in the headlines it's a bit concerning.

80% of the stuff that makes the front page is still pretty awesome, but what's in place to keep the signal/noise ratio high? Does the HN model still work as the community scales? What's in store for (++ HN)?",
  "timestamp": "2008-02-22T02:33:40.000Z",
  "title": "Ask HN: The Arc Effect",
  "type": "story",
  "url": undefined,
}
`;

exports[`getItemById returns an existing 'show hn' story item 1`] = `
{
  "author": "velut",
  "childrenIds": [
    25497213,
  ],
  "dead": false,
  "deleted": false,
  "id": 25496976,
  "numChildren": 2,
  "parentId": undefined,
  "pollId": undefined,
  "pollOptionsIds": undefined,
  "score": 1,
  "text": undefined,
  "timestamp": "2020-12-21T17:16:30.000Z",
  "title": "Show HN: GoDoc for NPM Packages",
  "type": "story",
  "url": "https://www.jsdocs.io/",
}
`;

exports[`getItemById returns an existing comment item 1`] = `
{
  "author": "velut",
  "childrenIds": undefined,
  "dead": false,
  "deleted": false,
  "id": 27121843,
  "numChildren": undefined,
  "parentId": 27121265,
  "pollId": undefined,
  "pollOptionsIds": undefined,
  "score": undefined,
  "text": "Thank you!

Yes, I use prism-react-renderer for syntax highlighting.

I did not know about Shiki, but I'll look into it.",
  "timestamp": "2021-05-11T18:40:46.000Z",
  "title": undefined,
  "type": "comment",
  "url": undefined,
}
`;

exports[`getItemById returns an existing job item 1`] = `
{
  "author": "justin",
  "childrenIds": undefined,
  "dead": false,
  "deleted": false,
  "id": 192327,
  "numChildren": undefined,
  "parentId": undefined,
  "pollId": undefined,
  "pollOptionsIds": undefined,
  "score": 6,
  "text": "Justin.tv is the biggest live video site online. We serve hundreds of thousands of video streams a day, and have supported up to 50k live concurrent viewers. Our site is growing every week, and we just added a 10 gbps line to our colo. Our unique visitors are up 900% since January.

There are a lot of pieces that fit together to make Justin.tv work: our video cluster, IRC server, our web app, and our monitoring and search services, to name a few. A lot of our website is dependent on Flash, and we're looking for talented Flash Engineers who know AS2 and AS3 very well who want to be leaders in the development of our Flash.

Responsibilities



    * Contribute to product design and implementation discussions
    * Implement projects from the idea phase to production
    * Test and iterate code before and after production release 


Qualifications



    * You should know AS2, AS3, and maybe a little be of Flex.
    * Experience building web applications.
    * A strong desire to work on website with passionate users and ideas for how to improve it.
    * Experience hacking video streams, python, Twisted or rails all a plus.


While we're growing rapidly, Justin.tv is still a small, technology focused company, built by hackers for hackers. Seven of our ten person team are engineers or designers. We believe in rapid development, and push out new code releases every week. We're based in a beautiful office in the SOMA district of SF, one block from the caltrain station. If you want a fun job hacking on code that will touch a lot of people, JTV is for you.

Note: You must be physically present in SF to work for JTV. Completing the technical problem at http://www.justin.tv/problems/bml [http://www.justin.tv/problems/bml] will go a long way with us. Cheers!",
  "timestamp": "2008-05-16T23:40:17.000Z",
  "title": "Justin.tv is looking for a Lead Flash Engineer!",
  "type": "job",
  "url": "",
}
`;

exports[`getItemById returns an existing poll item 1`] = `
{
  "author": "pg",
  "childrenIds": [
    126822,
    126823,
    126917,
    126993,
    126824,
    126934,
    127411,
    126888,
    127681,
    126818,
    126816,
    126854,
    127095,
    126861,
    127313,
    127299,
    126859,
    126852,
    126882,
    126832,
    127072,
    127217,
    126889,
    126875,
    127535,
  ],
  "dead": false,
  "deleted": false,
  "id": 126809,
  "numChildren": 54,
  "parentId": undefined,
  "pollId": undefined,
  "pollOptionsIds": [
    126810,
    126811,
    126812,
  ],
  "score": 47,
  "text": undefined,
  "timestamp": "2008-03-01T20:34:12.000Z",
  "title": "Poll: What would happen if News.YC had explicit support for polls?",
  "type": "poll",
  "url": undefined,
}
`;

exports[`getItemById returns an existing poll option item 1`] = `
{
  "author": "pg",
  "childrenIds": undefined,
  "dead": false,
  "deleted": false,
  "id": 160705,
  "numChildren": undefined,
  "parentId": undefined,
  "pollId": 160704,
  "pollOptionsIds": undefined,
  "score": 335,
  "text": "Yes, ban them; I'm tired of seeing Valleywag stories on News.YC.",
  "timestamp": "2008-04-11T04:02:56.000Z",
  "title": undefined,
  "type": "pollopt",
  "url": undefined,
}
`;

exports[`getItemById returns an existing story item 1`] = `
{
  "author": "velut",
  "childrenIds": [
    27107840,
    27112027,
    27112015,
    27121265,
  ],
  "dead": false,
  "deleted": false,
  "id": 27107832,
  "numChildren": 7,
  "parentId": undefined,
  "pollId": undefined,
  "pollOptionsIds": undefined,
  "score": 14,
  "text": undefined,
  "timestamp": "2021-05-10T16:30:22.000Z",
  "title": "Show HN: Automatic Documentation for TypeScript Packages",
  "type": "story",
  "url": "https://www.jsdocs.io",
}
`;
